<resources>
    <string name="app_name">RentARide</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="select">Transmission</string>
    <string name="doors">Doors</string>
    <string name="pass">Passengers</string>
    <string name="bag">Bag</string>
    <string name="air">AirCon</string>

    <string name="otp_code">Code</string>
    <string name="otp_text">Phone Verification</string>
    <string name="otp_description">Enter code sent to </string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="password_reset">Password reset</string>
    <string name="enter_phone_number_to_receive_verification_code">Provide phone number to receive verification code</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">next</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">update</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="read_and_agree_to">Read and agree to</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hyperlink"><a href="https://pages.flycricket.io/rentaride/terms.html">Terms and Conditions.</a></string>

    <string name="signin">SignIn</string>
    <string name="register">REGISTER</string>
    <string name="account_details">Account Details</string>
    <string name="how_can_we_help_you">How can we help you?</string>
    <string name="submit">Submit</string>
    <string name="search_rentaride">Search RentARide</string>
    <string name="book_now">Book Now</string>
    <string name="title_activity_easy_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="saved">Saved</string>
    <string name="orders">Orders</string>
    <string name="_694">...694</string>

</resources>