<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backArrow"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:padding="5dp"
            app:tint="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_reset"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_phone_number_to_receive_verification_code"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <com.hbb20.CountryCodePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_autoDetectCountry="true"
                android:layout_marginTop="5dp"
                app:ccp_showFlag="true"
                android:id="@+id/countryCodePn"
                app:ccp_showFullName="false"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/PhoneNumberFg">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:drawableStart="@drawable/ic_call_edt"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:id="@+id/forgotNext"
            android:text="@string/next"
            android:padding="10dp"
            android:textSize="18sp"
            android:textStyle="bold"/>


    </LinearLayout>

</ScrollView>