<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminPanel"
    android:orientation="vertical"
    android:background="#D0E7E1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add New Car"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/carImage"
            android:scaleType="centerCrop"
            android:src="@drawable/carlogo"
            android:cropToPadding="true"
            android:layout_marginStart="30dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/CarName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="Car Name"
                    android:inputType="text"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/CarFee"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_gravity="end"
                android:layout_marginStart="50dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="Charges"
                    android:inputType="number"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_gravity="end"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/doors"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                <AutoCompleteTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textStyle="bold"
                    android:id="@+id/Doors"
                    android:textSize="18sp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_marginStart="50dp">
                <AutoCompleteTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:id="@+id/passNo"
                    android:textStyle="bold"
                    android:textSize="18sp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/bag"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_marginLeft="20dp">
                <AutoCompleteTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textStyle="bold"
                    android:id="@+id/bagNo"
                    android:textSize="18sp"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/select"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                <AutoCompleteTextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:id="@+id/Trans"
                    android:textStyle="bold"
                    android:textSize="18sp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/air"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_marginStart="30dp">
                <AutoCompleteTextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:id="@+id/AirCon"
                    android:textStyle="bold"
                    android:textSize="18sp"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->
<!--            <de.hdodenhof.circleimageview.CircleImageView-->
<!--                android:layout_width="20dp"-->
<!--                android:layout_height="20dp"-->
<!--                android:id="@+id/agentImage"-->
<!--                android:scaleType="centerCrop"-->
<!--                android:src="@drawable/photo_upload"-->
<!--                android:cropToPadding="true"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:layout_marginStart="30dp"/>-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textStyle="bold"-->
<!--                android:textColor="@color/purple_700"-->
<!--                android:text="upload agent profile image"-->
<!--                android:layout_marginStart="31dp"-->
<!--                android:layout_marginTop="5dp"/>-->

<!--        </LinearLayout>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">
            <com.hbb20.CountryCodePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/CountryAdmin"
                android:layout_marginTop="3dp"
                app:ccp_autoDetectCountry="true"
                app:ccp_showNameCode="true"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/AgentPhone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Phone Number"
                    android:inputType="phone"
                    android:textStyle="bold"
                    android:textSize="18sp"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/agentUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="4dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Dealer username"
                android:inputType="text"
                android:textStyle="bold"
                android:textSize="18sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Car"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:id="@+id/addCar"
            android:textStyle="bold"
            android:padding="10dp"/>
    </LinearLayout>

</RelativeLayout>